--- a/core/server/proxy/pom.xml
+++ b/core/server/proxy/pom.xml
@@ -35,6 +35,12 @@
     <dependency>
       <groupId>com.fasterxml.jackson.dataformat</groupId>
       <artifactId>jackson-dataformat-xml</artifactId>
+      <exclusions>
+          <exclusion>
+              <groupId>org.fasterxml.jackson.core</groupId>
+              <artifactId>jackson-databind</artifactId>
+          </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
