--- a/pom.xml
+++ b/pom.xml
@@ -219,6 +219,12 @@
         <groupId>com.fasterxml.jackson.dataformat</groupId>
         <artifactId>jackson-dataformat-xml</artifactId>
         <version>2.9.9</version>
+        <exclusions>
+            <exclusion>
+                <groupId>org.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+            </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>com.github.serceman</groupId>
